-
Bug
-
Resolution: Done
-
P1: Critical
-
4.6.1
-
None
-
01e7389086d4afde33c3e2b1ece9c6d906869e08
QCompleter crashes in QCompletionEngine::saveInCache() when the cache limit (1MB) is reached.
The problem is the bad usage of the QMap<QModelIndex, CacheItem>::iterator erase method, which invalidates the passed iterator.
(as documented in QMap::iterator, see example of wrong code in the Qt documentation)
I attached the fix with correct iterator handling.