QCompleter: fix misuse of QMap that can lead to crashes

Patch providedin the task.

Task-number: QTBUG-8407